[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irene-voice-assistant"
dynamic = ["version"]
description = "Irene - Modern async voice assistant with optional components. Supports plugins and flexible deployment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core async framework (minimal dependencies)
    "python-dateutil>=2.8.0", # Fixed: Updated to be compatible with pandas/matplotlib
    # Configuration and validation (now required)
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tomli-w>=1.0.0", # For TOML writing support
    "tomlkit>=0.12.0", # For comment-preserving TOML round-trip editing
    # Logging and utilities
    "termcolor>=1.1.0",
    "pyyaml>=6.0",  # used in core runtime (webapi_router, intent_asset_loader, NLU) — was only transitive
    # NLU fuzzy matching (JSON donation system requirement)
    "rapidfuzz>=3.0.0",
    "jsonschema>=4.25.0",
    "prompt-toolkit>=3.0.51",
    "aiohttp>=3.12.15",
    "numpy<2",
]

[project.optional-dependencies]
# Audio input — split per-provider (B): the vosk ASR provider + the sounddevice audio backend
# (also reused by the microphone input). Umbrella `audio-input` kept for back-compat.
asr-vosk = [
    "vosk>=0.3.45",
]
audio-sounddevice = [
    "sounddevice>=0.5.0",
    "soundfile>=0.13.0",
]
audio-input = [
    "irene-voice-assistant[asr-vosk,audio-sounddevice]"
]

# Advanced ASR providers
advanced-asr = [
    "openai-whisper>=20230314",
    "torch>=1.13.0",  # Required by Whisper
    "torchaudio>=0.13.0"  # Required by Whisper
]
# sherpa-onnx ASR (ARCH-10): the alphacep VOSK Zipformer2 ONNX family (RU) + Moonshine (EN). NO torch.
# Per-arch version split lives in the PEP 508 markers (uv evaluates them per build target):
#   - armv7 (WB7): 1.12.36 — the smallest sherpa that supports Moonshine's merged .ort decoder (needed
#     for the EN ASR) and still supports the RU vosk Zipformer2. Its wheel bundles onnxruntime and self-
#     contains the native libs. Newer sherpa wheels fail on the WB7 out of the box (ELF alignment + a
#     GLIBCXX bump) — `docker/Dockerfile.armv7` fixes both (bookworm base + patch_onnx_align.py); see
#     BUG-14. This one pin serves both the RU and EN armv7 images (config selects the model).
#   - everything else (x86_64 / aarch64 / win_amd64 / macos): latest. Since 1.13 the native libraries
#     (onnxruntime + the C-API .so) ship in a SEPARATE `sherpa-onnx-core` wheel; without it the
#     extension can't load `libonnxruntime.so` (it is NOT bundled in the main wheel any more). Pull both
#     with matching markers — this is what made sherpa work on 64-bit/Windows, not just armv7.
asr-onnx = [
    "sherpa-onnx==1.12.36; platform_machine=='armv7l'",
    "sherpa-onnx>=1.13; platform_machine!='armv7l'",
    "sherpa-onnx-core>=1.13; platform_machine!='armv7l'",
]

# Enhanced audio input with cloud providers
audio-input-enhanced = [
    "irene-voice-assistant[audio-input,cloud-asr]"
]

# Complete audio input with all ASR providers
audio-input-complete = [
    "irene-voice-assistant[audio-input,cloud-asr,advanced-asr]"
]

# TTS output — split per-provider (B). silero needs torch (pulled as the CPU wheel via the
# [tool.uv.index]/[tool.uv.sources] pin below); the others are self-contained. Umbrella `tts` kept.
tts-silero = [
    "torch>=1.13.0",
]
tts-pyttsx = [
    "pyttsx3>=2.90",
]
tts-elevenlabs = [
    "elevenlabs>=1.0.3",
    "httpx>=0.25.0",
]
tts-vosk = [
    "vosk-tts>=0.3.0",  # VOSK TTS for high-quality Russian multi-speaker synthesis
]
tts = [
    "irene-voice-assistant[tts-pyttsx,tts-elevenlabs,tts-vosk,tts-silero]"
]

# Audio output components. ARCH-20: streamable-only backends — sounddevice (RawOutputStream, cross-OS),
# aplay (ALSA stdin, Linux), miniaudio (self-contained, bundled WASAPI/CoreAudio/ALSA, cross-OS incl. RPi).
# Dropped audioplayer (file-only) + simpleaudio (archived, WAV-buffer-only) — neither can stream raw PCM.
audio-miniaudio = [
    "miniaudio>=1.59",
]
# Umbrella: the two output backends + librosa (resampling helper, not owned by one provider).
# numpy dropped — it is a base dependency.
audio-output = [
    "irene-voice-assistant[audio-sounddevice,audio-miniaudio]",
    "librosa>=0.10.0",  # For high-quality audio resampling in audio_helpers.py
]

# Wake word detection. 64-bit only — the WB7/armv7 satellite wakes on-device (ESP32). Two provider
# families, each its own extra (contribution principle); `voice-trigger` is the both-families umbrella.
#   openWakeWord  → wake-onnx  (ONNX runtime, no torch)
#   microWakeWord → wake-tflite (pymicro-wakeword: micro frontend + bundled tflite C lib; ESP32-unified)
wake-onnx = [
    # numpy + aiohttp are base dependencies — not re-listed here (CR-C4: avoid drifting version floors).
    "openwakeword>=0.6.0",
    "onnxruntime>=1.15.0",
]
# pymicro-wakeword ships wheels for x86_64 / aarch64 / win_amd64 / macos — NO armv7 (which is correct:
# the WB7 wakes on-device on the ESP32, never server-side here). The marker keeps the extra installable
# on armv7 (it just resolves to nothing there) instead of failing on a missing wheel.
wake-tflite = [
    # numpy + aiohttp are base dependencies — not re-listed here (CR-C4).
    "pymicro-wakeword>=2.0.0; platform_machine != 'armv7l'",
]
# microVAD (pymicro-vad) — the 'microvad' VAD engine; self-contained (bundles model + tflite C lib),
# shares the micro frontend with wake-tflite. pymicro-vad ships wheels for **Linux x86_64/aarch64 only**
# (no Windows/macOS/armv7), so the marker scopes it there; on other targets use energy or silero VAD.
vad-tflite = [
    "pymicro-vad>=2.0.0; sys_platform == 'linux' and (platform_machine == 'x86_64' or platform_machine == 'aarch64')",
]
voice-trigger = [
    "irene-voice-assistant[wake-onnx,wake-tflite]",
]

# Web API components
web-api = [
    "fastapi>=0.100.0",
    # plain uvicorn: [standard] pulls uvloop/httptools/watchfiles (C/Rust) with no armv7 wheels →
    # source builds that hang/fail under QEMU. WS still works via the `websockets` dep below.
    "uvicorn>=0.20.0",
    "websockets>=11.0.0",
    "python-multipart>=0.0.6",  # Required for file uploads in Audio/ASR endpoints
]

# Cloud ASR components
cloud-asr = [
    "google-cloud-speech>=2.20.0",
    "google-auth>=2.17.0",
]

# LLM components — split per-provider (B). deepseek reuses llm-openai (OpenAI-compatible client).
llm-openai = [
    "openai>=1.0.0",
]
llm-anthropic = [
    "anthropic>=0.25.0",
]
llm = [
    "irene-voice-assistant[llm-openai,llm-anthropic]"
]

# NLU spaCy — the LIB lives in this extra; the LANGUAGE MODELS stay as raw direct-URL specs (returned
# in-code by the spaCy provider) so the build can trim them per-config via derive_build_reqs `_spacy_keep`.
# The provider returns ["nlu-spacy", <model URLs>]: derive routes the extra-name to uv, the URLs to pip-specs.
nlu-spacy = [
    "spacy>=3.8.0",
]
# Umbrella with all models — for the `voice` dev group (`uv sync`); the trimmed Docker build path uses
# the provider's raw model specs instead. numpy dropped — it is a base dependency.
nlu = [
    "irene-voice-assistant[nlu-spacy]",
    # Phase 1: Multi-language model support - Russian models (in preference order)
    "ru_core_news_md @ https://github.com/explosion/spacy-models/releases/download/ru_core_news_md-3.8.0/ru_core_news_md-3.8.0-py3-none-any.whl",
    "ru_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/ru_core_news_sm-3.8.0/ru_core_news_sm-3.8.0-py3-none-any.whl",
    # Phase 1: Multi-language model support - English models (in preference order)
    "en_core_web_md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"
]

# Text processing and multilingual support.
# Number→words normalization uses ovos-number-parser (the maintained OpenVoiceOS successor of the
# abandoned MycroftAI lingua-franca — QUAL-13/ASSET-3, 2026-06-03). Pure-Python (no armv7 wheel
# concern), ru+en. Optional: irene/utils/text_processing.py keeps a pure-Python Russian fallback
# (num_to_text_ru) so the ru path works even without this extra installed.
text-multilingual = [
    "ovos-number-parser>=0.5.1",
    "runorm>=0.1.0",
    "eng-to-ipa>=0.0.2",
]

# Russian stress/homograph accentor for the `piper_ruaccent` TTS provider (ARCH-24 T2/PR3).
# 64-bit ONLY: ruaccent pulls onnxruntime + transformers, and onnxruntime has no armv7 wheel —
# the marker keeps it off the armv7 image (it resolves to nothing there, like pymicro). The plain
# `piper` provider remains the armv7 TTS.
tts-ruaccent = [
    "ruaccent>=1.5.8; platform_machine != 'armv7l'",
]

# Note: wake-word-training dependencies moved to separate project

# Development dependencies — single opt-in source (install via `--extra dev`).
# Consolidated 2026-06-04: the former [dependency-groups].dev (PEP 735, auto-installed
# by uv) duplicated mypy and split the toolchain; folded its type stubs in here so a
# bare `uv sync` is runtime-only and `--extra dev` is the complete dev toolchain.
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=5.0.0",  # TEST-7: coverage measurement is a mandatory part of the suite rewrite
    # The runtime CPython here is built WITHOUT the stdlib `_sqlite3` extension, which coverage.py
    # requires. Mirror wb-mqtt-bridge: ship pysqlite3-binary and alias it onto `sqlite3` (see the
    # root conftest.py). Self-contained — bundles its own SQLite, no system dependency.
    "pysqlite3-binary>=0.5.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "mypy==1.15.0",  # Pinned to match wb-mqtt-bridge version
    "pyright==1.1.410",  # QUAL-4: pinned — the standard-mode gate; diagnostics vary by version
    "import-linter>=2.0",  # ARCH-5: enforce the hexagon import contracts
    # QUAL-32 / Invariant #9: the no-TYPE_CHECKING AST gate, now upstream (extracted from this repo).
    # Pinned — diagnostics/behaviour are an explicit-bump choice. Provides `check-no-type-checking` on PATH.
    "py-dev-gates @ git+https://github.com/droman42/py-dev-gates@v0.1.1",
    # type stubs (were in [dependency-groups].dev)
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-pillow>=10.2.0.20240822",
    "types-pyyaml>=6.0.12.20250516",
    "types-requests>=2.32.4.20250611",
    "types-setuptools>=80.9.0.20250801",
    "types-urllib3>=1.26.25.14",
]

# Convenience groups - Fixed: Re-enabled with proper dependencies
# Full voice assistant
voice = [
    "irene-voice-assistant[audio-input,tts,audio-output,voice-trigger,nlu,web-api,text-multilingual]"
]

# API server only
api = [
    "irene-voice-assistant[web-api]"
]

# Headless mode (text processing only) — base deps only (config-writing folded into core; CR-B10).
headless = []

# All optional components - Fixed: Re-enabled
all = [
    # BUILD-9: `all` must be genuinely all (CI type-checks the full provider surface with
    # `pip install .[all,dev]`). Previously missed tts-ruaccent + vad-tflite (pyright
    # missing-import failures) and the api/headless/audio-input-* umbrella aliases.
    "irene-voice-assistant[voice,cloud-asr,advanced-asr,asr-onnx,llm,tts-ruaccent,vad-tflite,api,headless,audio-input-complete,audio-input-enhanced]"
]

[project.scripts]
# Configuration and build management tools
irene-config-validate = "irene.tools.config_validator_cli:main"
irene-build-analyze = "irene.tools.build_analyzer:main"
irene-dependency-validate = "irene.tools.dependency_validator:main"

# Trace recording + replay (ARCH-19) — also covers the old VAD-recording workflow
# (capture_level=segmenter on a mic session → read vad_frames, then replay to tune)
irene-replay-trace = "irene.tools.replay_trace:main"

# Main runners
irene-cli = "irene.runners.cli:run_cli"
irene-webapi = "irene.runners.webapi_runner:run_webapi"
irene-voice = "irene.runners.voice_runner:run_voice"

# ============================================================
# ENTRY-POINTS CATALOG - Provider Discovery System
# ============================================================
# Entry-points catalog for dynamic provider discovery.
# This replaces hardcoded _provider_classes dictionaries and enables:
# - Configuration-driven loading
# - External package extensibility
# - Build-time optimization
# - Dynamic discovery without hardcoded imports

[project.entry-points."irene.providers.audio"]
console = "irene.providers.audio.console:ConsoleAudioProvider"
sounddevice = "irene.providers.audio.sounddevice:SoundDeviceAudioProvider"
aplay = "irene.providers.audio.aplay:AplayAudioProvider"
miniaudio = "irene.providers.audio.miniaudio:MiniaudioAudioProvider"

[project.entry-points."irene.providers.tts"]
console = "irene.providers.tts.console:ConsoleTTSProvider"
pyttsx = "irene.providers.tts.pyttsx:PyttsTTSProvider"
silero_v3 = "irene.providers.tts.silero_v3:SileroV3TTSProvider"
silero_v4 = "irene.providers.tts.silero_v4:SileroV4TTSProvider"
vosk_tts = "irene.providers.tts.vosk:VoskTTSProvider"
piper = "irene.providers.tts.piper:PiperTTSProvider"
piper_ruaccent = "irene.providers.tts.piper_ruaccent:PiperRuAccentTTSProvider"
elevenlabs = "irene.providers.tts.elevenlabs:ElevenLabsTTSProvider"

[project.entry-points."irene.providers.asr"]
vosk = "irene.providers.asr.vosk:VoskASRProvider"
whisper = "irene.providers.asr.whisper:WhisperASRProvider"
google_cloud = "irene.providers.asr.google_cloud:GoogleCloudASRProvider"
sherpa_onnx = "irene.providers.asr.sherpa_onnx:SherpaOnnxASRProvider"
sherpa_moonshine = "irene.providers.asr.sherpa_moonshine:SherpaMoonshineASRProvider"

[project.entry-points."irene.providers.llm"]
console = "irene.providers.llm.console:ConsoleLLMProvider"
deepseek = "irene.providers.llm.deepseek:DeepSeekLLMProvider"
openai = "irene.providers.llm.openai:OpenAILLMProvider"
anthropic = "irene.providers.llm.anthropic:AnthropicLLMProvider"

[project.entry-points."irene.providers.voice_trigger"]
openwakeword = "irene.providers.voice_trigger.openwakeword:OpenWakeWordProvider"
microwakeword = "irene.providers.voice_trigger.microwakeword:MicroWakeWordProvider"

[project.entry-points."irene.providers.vad"]
energy = "irene.providers.vad.energy:EnergyVADProvider"
silero = "irene.providers.vad.silero:SileroVADProvider"
microvad = "irene.providers.vad.microvad:MicroVADProvider"

[project.entry-points."irene.providers.nlu"]
hybrid_keyword_matcher = "irene.providers.nlu.hybrid_keyword_matcher:HybridKeywordMatcherProvider"
spacy_nlu = "irene.providers.nlu.spacy_provider:SpaCyNLUProvider"
llm = "irene.providers.nlu.llm:LLMNLUProvider"

[project.entry-points."irene.providers.text_processor"]
# QUAL-13: one config-driven processor (per-stage normalizer chains) replaced the 4 stage-specific
# providers (asr/general/tts/number), which were decorative routing around one number call.
unified_text_processor = "irene.providers.text_processor.unified:UnifiedTextProcessor"

[project.entry-points."irene.components"]
tts = "irene.components.tts_component:TTSComponent"
asr = "irene.components.asr_component:ASRComponent"
llm = "irene.components.llm_component:LLMComponent"
audio = "irene.components.audio_component:AudioComponent"
voice_trigger = "irene.components.voice_trigger_component:VoiceTriggerComponent"
nlu = "irene.components.nlu_component:NLUComponent"
text_processor = "irene.components.text_processor_component:TextProcessorComponent"
intent_system = "irene.components.intent_component:IntentComponent"
monitoring = "irene.components.monitoring_component:MonitoringComponent"
configuration = "irene.components.configuration_component:ConfigurationComponent"
nlu_analysis = "irene.components.nlu_analysis_component:NLUAnalysisComponent"

[project.entry-points."irene.workflows"]
unified_voice_assistant = "irene.workflows.voice_assistant:UnifiedVoiceAssistantWorkflow"

[project.entry-points."irene.intents.handlers"]
conversation = "irene.intents.handlers.conversation:ConversationIntentHandler"
greetings = "irene.intents.handlers.greetings:GreetingsIntentHandler"
timer = "irene.intents.handlers.timer:TimerIntentHandler"
datetime = "irene.intents.handlers.datetime:DateTimeIntentHandler"
system = "irene.intents.handlers.system:SystemIntentHandler"
random_handler = "irene.intents.handlers.random_handler:RandomIntentHandler"
system_service_handler = "irene.intents.handlers.system_service_handler:SystemServiceIntentHandler"
audio_playback_handler = "irene.intents.handlers.audio_playback_handler:AudioPlaybackIntentHandler"
translation_handler = "irene.intents.handlers.translation_handler:TranslationIntentHandler"
text_enhancement_handler = "irene.intents.handlers.text_enhancement_handler:TextEnhancementIntentHandler"
voice_synthesis_handler = "irene.intents.handlers.voice_synthesis_handler:VoiceSynthesisIntentHandler"
provider_control_handler = "irene.intents.handlers.provider_control_handler:ProviderControlIntentHandler"
speech_recognition_handler = "irene.intents.handlers.speech_recognition_handler:SpeechRecognitionIntentHandler"

[project.entry-points."irene.inputs"]
cli = "irene.inputs.cli:CLIInput"
microphone = "irene.inputs.microphone:MicrophoneInput"
web = "irene.inputs.web:WebInput"



# NOTE: Builtin plugins section removed - no builtin plugins in unified architecture
# All functionality moved to intent handlers with JSON donations

[project.entry-points."irene.runners"]
cli = "irene.runners.cli:CLIRunner"
voice = "irene.runners.voice_runner:VoiceRunner"
webapi = "irene.runners.webapi_runner:WebAPIRunner"

# Pull torch/torchaudio from the CPU-only wheel index. The only torch consumer is the x86_64 standalone
# (Silero TTS + Whisper ASR), and it runs device="cpu" — the default PyPI torch drags in ~3.4 GB of unused
# NVIDIA CUDA + Triton wheels. The CPU wheels carry none of that (confirmed: image 6.44 GB → 3.16 GB;
# triton ~688 MB still rides in via openai-whisper — see review CR-A1/triton follow-up). Satellites
# ship no torch at all. The index is `explicit` + scoped via [tool.uv.sources] so it is consulted ONLY for
# torch/torchaudio; a non-explicit index would let uv's first-index rule cap pytorch's stale mirrors of
# common deps (urllib3, types-requests, …) and break resolution. torch reaches the build only through the
# `tts-silero` / `advanced-asr` EXTRAS (`uv pip install .[…]`), and the pip interface DOES honor
# [tool.uv.sources] for the project's own optional-deps — so the CPU pin applies with no Dockerfile step.
# (It is NOT honored for loose `-r requirements` specs, which is why torch must stay in an extra, not pip-specs.)
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[tool.setuptools.packages.find]
where = ["."]
include = ["irene*"]
# Fixed: Removed references to non-existent directories
exclude = []

# Fixed: Removed duplicate dev-dependencies section
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
# Fixed: Removed references to non-existent directories
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["irene/tests", "tools"]
# pytest-asyncio: treat bare `async def test_*` as asyncio tests (the suite predates
# pytest-asyncio's strict default; without this ~23 async tests error as "not natively supported").
asyncio_mode = "auto"
filterwarnings = [
    # Pydantic V1-style @validator / class Config across the config + donation models is known
    # tech debt (separate migration); silence the deprecation flood so real signal is visible.
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]

# ARCH-5: Hexagonal import contracts (enforced via `lint-imports` and irene/tests/test_import_contracts.py).
# Encodes the rules ARCH-1..4 established so the architecture can't silently regress.
[tool.importlinter]
root_package = "irene"

[[tool.importlinter.contracts]]
name = "Domain (intents) depends on nothing outward (ARCH-1)"
type = "forbidden"
source_modules = ["irene.intents"]
forbidden_modules = [
    "irene.components",
    "irene.workflows",
    "irene.providers",
    "irene.web_api",
    "irene.runners",
    "irene.inputs",
    "irene.outputs",
]
# QUAL-24 (DONE): the `intents.handlers.* -> core.engine` get_core() escape hatch was removed.
# Handlers now depend on domain-owned capability ports (irene/intents/ports.py); the application
# injects the real components inward. No ignore_imports — the domain-clean rule enforces with no hatch.

[[tool.importlinter.contracts]]
name = "Config has no upward imports (ARCH-2)"
type = "forbidden"
source_modules = ["irene.config"]
forbidden_modules = [
    "irene.core",
    "irene.components",
    "irene.providers",
    "irene.workflows",
    "irene.web_api",
    "irene.runners",
    "irene.inputs",
    "irene.outputs",
    "irene.intents",
]

[[tool.importlinter.contracts]]
name = "Components (application) don't import delivery (ARCH-3)"
type = "forbidden"
source_modules = ["irene.components"]
forbidden_modules = [
    "irene.web_api",
    "irene.runners",
    "irene.inputs",
    "irene.outputs",
]

[[tool.importlinter.contracts]]
name = "Only nlu_analysis may import the analysis tooling (ARCH-3)"
type = "forbidden"
source_modules = ["irene.components"]
forbidden_modules = ["irene.analysis"]
ignore_imports = [
    "irene.components.nlu_analysis_component -> irene.analysis.*",
]

[[tool.importlinter.contracts]]
name = "Adapters (providers) don't import application (ARCH-4)"
type = "forbidden"
source_modules = ["irene.providers"]
forbidden_modules = [
    "irene.components",
    "irene.workflows",
]

[[tool.importlinter.contracts]]
name = "Provider categories are independent of each other (ARCH-4)"
type = "independence"
modules = [
    "irene.providers.asr",
    "irene.providers.tts",
    "irene.providers.audio",
    "irene.providers.llm",
    "irene.providers.nlu",
    "irene.providers.voice_trigger",
    "irene.providers.vad",
    "irene.providers.text_processor",
]

[[tool.importlinter.contracts]]
# ARCH-6/SCC-2: the input PORT module must not import its concrete adapters (no base⇄subclass cycle,
# no service-locator). The InputManager orchestrator lives in irene.inputs.manager, which is the input
# layer's composition point and legitimately depends outward on the adapters.
name = "Input port does not import its adapters (ARCH-6 / SCC-2)"
type = "forbidden"
source_modules = ["irene.inputs.base"]
forbidden_modules = [
    "irene.inputs.cli",
    "irene.inputs.microphone",
    "irene.inputs.web",
    "irene.inputs.manager",
]

[[tool.importlinter.contracts]]
# ARCH-11: core depends only on its own ports (irene.core.interfaces), never outward on the
# application/delivery/adapter layers. This REVOKES the ARCH-5 reclassification that left the
# core->{inputs,workflows,components} composition-root edges unenforced. The edges were inverted in
# ARCH-11 S1-S3 (input port + Component/Workflow ports lifted into irene.core.interfaces; all manager
# construction moved to the composition root irene.runners.composition.build_core). NB: irene.core.*
# (e.g. irene.core.components, irene.core.workflow_manager) is NOT irene.components/irene.workflows.
name = "Core does not import the outer layers (ARCH-11)"
type = "forbidden"
source_modules = ["irene.core"]
forbidden_modules = [
    "irene.inputs",
    "irene.outputs",
    "irene.workflows",
    "irene.components",
]

[[tool.importlinter.contracts]]
# ARCH-28: the durable-action store is a SEAM with exactly three legitimate clients — the F&F
# launch/completion choke point (intents.handlers.base), the startup reconciler (core.engine),
# and the notification redelivery queue (core.notifications). Everything else uses those seams:
# delivery layers drain via NotificationService, application services launch via `durable=`,
# observability reads the runtime registry — never the persisted store directly. This contract
# pins that: no application/delivery/adapter layer may import the store module.
name = "Durable-action store is reached only through its seam (ARCH-28)"
type = "forbidden"
source_modules = [
    "irene.components",
    "irene.workflows",
    "irene.providers",
    "irene.web_api",
    "irene.runners",
    "irene.inputs",
    "irene.outputs",
]
forbidden_modules = ["irene.core.durable_actions"]
# The three seam edges are the sanctioned gateways — ignoring them here means a chain that
# goes THROUGH the seam (e.g. webapi_router -> core.notifications -> durable_actions, the
# drain call) doesn't count, while a NEW direct import from any outer layer still fails.
ignore_imports = [
    "irene.intents.handlers.base -> irene.core.durable_actions",
    "irene.core.engine -> irene.core.durable_actions",
    "irene.core.notifications -> irene.core.durable_actions",
]

[[tool.importlinter.contracts]]
# ARCH-12: utils is the foundational kernel — it must not reach UP into any application/config/delivery
# layer. The two residual upward edges were removed: utils.vad->core.metrics (a dead import) and
# utils.logging->config.models (the LogLevel enum, relocated INTO utils.logging and re-exported by
# config.models). NB: config.models now depends on utils.logging (downward) — that is the intended
# direction and is allowed.
name = "Utils (foundation) depends on nothing upward (ARCH-12)"
type = "forbidden"
source_modules = ["irene.utils"]
forbidden_modules = [
    "irene.core",
    "irene.config",
    "irene.components",
    "irene.intents",
    "irene.workflows",
    "irene.inputs",
    "irene.outputs",
    "irene.providers",
    "irene.runners",
    "irene.web_api",
]

[tool.mypy]
# Basic settings - detailed configuration in mypy.ini (matching wb-mqtt-bridge)
python_version = "3.11"

# [tool.pyright] removed (QUAL-4): pyrightconfig.json is the single source of truth
# for the standard-mode type gate. Two configs drifted; the JSON one wins when present.

[tool.setuptools.dynamic]
version = {attr = "irene.__version__.__version__"}
